--- a/templates/main.html
+++ b/templates/main.html
@@ -30,7 +30,7 @@
 {% load static %}
 {% for message  in messages  %}
 <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
-  <strong>message!</strong>   {{ message }}
+  <b>message!</b>   {{ message }}
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
