--- a/plan/templates/login.html
+++ b/plan/templates/login.html
@@ -4,9 +4,9 @@
 <style>
 #login-form{
     text-transform: uppercase;
-    background-color:#eee;
+    background-color:#212529;
     padding: 10px;
-    box-shadow: 10px 5px 10px 5px gray;
+    box-shadow: 10px 5px 10px 5px #17a2b8;
 }
 
 
