--- a/plan/templates/users.html
+++ b/plan/templates/users.html
@@ -5,35 +5,14 @@
   <style>
 
 
-    .order-card {
-      color: rgb(167, 20, 20);
-    }
-
-    .bg-c-blue {
-      background: #e6b20a;
-    }
-
-    .bg-c-green {
-      background:#e673e6;
-    }
-
-    .bg-c-yellow {
-      background: #d44242;
-    }
-
-    .bg-c-pink {
-      background: #663a30;
-    }
 
 
     .card {
       
-      -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
-      box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+      background-color:#31363b;
       border: 1px solid black;
       margin-bottom: 30px;
-      -webkit-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out;
+  
     }
 
     .card .card-block {
@@ -55,15 +34,7 @@
     left: 0px;
     right: 0px;
   }
-  #button1{
-    width: 300px;
-    height: 40px;
-    
-    }
-    #button2{
-    width: 300px;
-    height: 40px;
-    }
+
   </style>
  
     <br><br>
@@ -83,9 +54,9 @@
 
           </form>
           <br>
-          <table class="table  table-hover table-sm ">
+          <table class="table table-dark   table-hover table-sm ">
             {% if user %}
-            <thead class="table-dark">        
+            <thead class="thead-dark">        
               <tr>
                 <th scope="col">NAME</th>
                 <th scope="col">Email</th>
@@ -104,7 +75,7 @@
 
               <td>{{user.phoneno}}</td>
         
-              <td><a href="{% url 'updateuser' user.user %}"class="btn btn-warning rounded" id=" #button1">
+              <td><a href="{% url 'updateuser' user.user %}"class="btn btn-warning rounded" id=" ">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                   <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                   <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
@@ -133,8 +104,8 @@
         <br>
         <div class="table-responsive">
           <br>
-          <table class="table  table-hover table-sm ">
-            <thead class="table-dark">
+          <table class="table table-dark  table-hover table-sm ">
+            <thead class="thead-dark">
               <tr>
                 <th scope="col">NAME</th>
                 <th scope="col">Email</th>
@@ -148,7 +119,7 @@
               <td>{{u.user}}</td>
               <td>{{u.email}}</td>
               <td>{{u.phoneno}}</td>
-              <td><a href="{% url 'updateuser' u.user %}"class="btn btn-warning rounded" id=" #button1">
+              <td><a href="{% url 'updateuser' u.user %}"class="btn btn-warning rounded" id=" ">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
                   <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
                   <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z"/>
