--- a/plan/templates/view-user.html
+++ b/plan/templates/view-user.html
@@ -109,7 +109,7 @@ body {
         </div>
       </div>
       <br><br>
-      <a href="/" class="btn btn-danger btn-lg ">Back to Home</a>
+      <a href="/" class="btn btn-danger btn-lg ">Dashboard</a>
 
 
       
