--- a/plan/templates/users.html
+++ b/plan/templates/users.html
@@ -151,7 +151,7 @@
               <li class="page-item"> 
               </li>
               {% if  page == user.number%} 
-              <li class="page-item"><a class="page-link  btn btn-primary" href="?page={{page}}">{{page}}</a></li>
+              <li class="page-item"><a class="page-link  bg-dark" href="?page={{page}}">{{page}}</a></li>
               {% else %}
               <li class="page-item"><a class="page-link" href="?page={{page}}">{{page}}</a></li>
               {% endif %}
