--- a/plan/templates/create-user.html
+++ b/plan/templates/create-user.html
@@ -29,7 +29,7 @@
             {{form.phoneno|as_crispy_field}}
             {{form.current_plan|as_crispy_field}}
             {{form.profile_image|as_crispy_field}}
-            <a data-toggle="tooltip" title="only upload png and pdf format">{{form.id_proof|as_crispy_field}}</a>
+            <a data-toggle="tooltip" title="only upload image and pdf format">{{form.id_proof|as_crispy_field}}</a>
             {{form.start_date|as_crispy_field}}
             {{form.end_date|as_crispy_field}}
             
