--- a/plan/templates/users.html
+++ b/plan/templates/users.html
@@ -109,7 +109,7 @@
               <tr>
                 <th scope="col">NAME</th>
                 <th scope="col">Email</th>
-                <th scope="col">Phone Number</th>
+                <th scope="col">Number</th>
                 <th scope="col">ACTION</th>
               </tr>
             </thead>
