--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,5 +1,8 @@
+{% if request.user.is_authenticated %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  {% if request.user.is_authenticated %}
   <a class="navbar-brand" href="{% url 'dashboard' %}">Dashboard</a>
+  {% endif %}
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
     aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -7,19 +10,32 @@
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      {% if request.user.is_authenticated %}
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'plans' %}">Plans <span class="sr-only">(current)</span></a>
       </li>
+      {% endif %}
+      {% if request.user.is_authenticated %}
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'users' %}">Users <span class="sr-only">(current)</span></a>
       </li>
+      {% endif %}
+      {% if request.user.is_authenticated %}
       <li class="nav-item active">
         <a class="nav-link " href="{% url 'createplan' %}">Create Plan <span class="sr-only">(current)</span></a>
       </li>
+      {% endif %}
+      {% if request.user.is_authenticated %}
       <li class="nav-item active">
         <a class="nav-link " href="{% url 'createuser'%}">Create User <span class="sr-only">(current)</span></a>
       </li>
-      </ul>
+      {% endif %}
+      {% if request.user.is_authenticated %}
+      <li class="nav-item active">
+      <a href="/admin/plan/userprofile/export/?" class="nav-link">Export Data</a>
+      </li>
+      {% endif %}
+    </ul>
       {% if request.user.is_authenticated %}
       <form class="form-inline my-2 my-lg-0">
         <a class="btn btn-outline-danger my-2 my-sm-0" href="{% url 'logout' %}">Logout</a>
@@ -28,21 +44,4 @@
  
   </div>
 </nav>
-<!----
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link" href="{% url 'dashboard' %}">Dashboard <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="{% url 'plans' %}">Plans <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="{% url 'users' %}">Users <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="{% url 'createplan' %}">Create Plan <span class="sr-only">(current)</span></a>
-        <a class="nav-link" href="{% url 'createuser'%}">Create User <span class="sr-only">(current)</span></a>
-      </li>
-  </div>
-</nav>
--->
+{% endif %}
