--- a/templates/main.html
+++ b/templates/main.html
@@ -23,7 +23,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Poppins:wght@100;500&display=swap" rel="stylesheet">
-  <title></title>
+  <title>Internet service provider management system</title>
 
 </head>
 <style>
@@ -39,9 +39,8 @@
   }
 </style>
 
-<body>
-
-  {% include 'navbar.html'%}
+<body> 
+ {% include 'navbar.html'%}
   {% load static %}
   {% for message  in messages  %}
   <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
