--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,7 +1,11 @@
 {% if request.user.is_authenticated %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   {% if request.user.is_authenticated %}
-  <a class="navbar-brand" href="{% url 'dashboard' %}">Dashboard</a>
+  <a class="navbar-brand" href="{% url 'dashboard' %}">
+    <img src="https://cdn-icons.flaticon.com/png/512/3630/premium/3630451.png?token=exp=1634540490~hmac=6e970745d502442094512ef8a16c055a" width="30" height="30" class="d-inline-block align-top" alt="">
+    Dashboard
+  </a>
+
   {% endif %}
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
     aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,7 +21,7 @@
       {% endif %}
       {% if request.user.is_authenticated %}
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'users' %}">Users <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="{% url 'users' %}">Clients <span class="sr-only">(current)</span></a>
       </li>
       {% endif %}
       {% if request.user.is_authenticated %}
@@ -27,7 +31,7 @@
       {% endif %}
       {% if request.user.is_authenticated %}
       <li class="nav-item active">
-        <a class="nav-link " href="{% url 'createuser'%}">Create User <span class="sr-only">(current)</span></a>
+        <a class="nav-link " href="{% url 'createuser'%}">Create Client <span class="sr-only">(current)</span></a>
       </li>
       {% endif %}
       {% if request.user.is_authenticated %}
