--- a/templates/main.html
+++ b/templates/main.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -51,7 +52,7 @@
   </div>
   {% endfor %}
 
-
+ 
   {% block content %}
 
 
