--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   {% if request.user.is_authenticated %}
   <a class="navbar-brand" href="{% url 'dashboard' %}">
-    <img src="https://cdn-icons.flaticon.com/png/512/3630/premium/3630451.png?token=exp=1634540490~hmac=6e970745d502442094512ef8a16c055a" width="30" height="30" class="d-inline-block align-top" alt="">
+    <img src="static\images\logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
     Dashboard
   </a>
 
