--- a/plan/templates/dashboard.html
+++ b/plan/templates/dashboard.html
@@ -85,7 +85,7 @@
       <div class="col-md-6 col-xl-6">
         <div class="card bg-c-green order-card text-center" id="user">
           <div class="card-block">
-            <img src="https://cdn-icons.flaticon.com/png/512/3211/premium/3211647.png?token=exp=1634543373~hmac=f8d304ebaa61724a54ce6f0e53a6707f" width="50" height="50" class=" img-fluid  rounded float-left" alt="" >
+            <img src="{% static 'images/client.png'%}" width="50" height="50" class=" img-fluid  rounded float-left" alt="" >
             <h6 class="m-b-20  text-center "><a href="{% url 'users' %}" style="text-decoration: none;color:rgb(255, 255, 255);">Total Clients</a> </h6>
             <h2 class="text-center"><span>{{total_user}}</span></h2>
             
