--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,8 +1,9 @@
+{% load static%}
 {% if request.user.is_authenticated %}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   {% if request.user.is_authenticated %}
   <a class="navbar-brand" href="{% url 'dashboard' %}">
-    <img src="static\images\logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+    <img src="{% static 'images/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
     Dashboard
   </a>
 
